@@ -3,7 +3,7 @@ dnl (C)Copyright 2005-2024, RW Penney
 
 dnl run 'autoreconf -v -i -s; ./configure; make'
 
-AC_INIT(cryptmount, 6.2.2, cryptmount@rwpenney.uk)
+AC_INIT(cryptmount, 6.3-beta, cryptmount@rwpenney.uk)
 AC_PREREQ(2.59)
 
 test "$sysconfdir" = '${prefix}/etc' && sysconfdir=/etc
